--- a/styles/components/media_library.scss
+++ b/styles/components/media_library.scss
@@ -381,6 +381,7 @@ fieldset.media-library-widget {
 
   .media-library-selected-count {
     flex-grow: 1;
+    margin-left: 0;
   }
 }
 
